cree una nueva pagina

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   nuestros proyectos de esta forma estamos brindandote lo mejor y esperamos sigas conectado a nuestras paginas para ofrecerte mejores
                    contenidos de calidad.
             </h4>  
-            <a href="audifonos.html">Todo en Audifonos</a> <br> <a href="cargadores.html">Todo en Cargadores</a> <br><a href="relojes.html">Todo en Relojes</a> <br> <a href="teclados.html">Todo en Teclados</a></li> 
+            <a href="audifonos.html">Todo en Audifonos</a> <br> <a href="nuevoaccesorio.html">nuevo articulo</a><br> <a href="cargadores.html">Todo en Cargadores</a> <br><a href="relojes.html">Todo en Relojes</a> <br> <a href="teclados.html">Todo en Teclados</a></li> 
                <p>si desean saber mas acerca de lo que brindamos pueden comunicarse en las paginas de abajo, whatsApp, Instagram, etc.
                </p>
          
