agrege texto a audifonos

--- a/audifonos.html
+++ b/audifonos.html
@@ -10,7 +10,7 @@
     <header>
         <li><a href="index.html">inicio</a></li>  
     </header>
-    <article> <h1>Encuentra los mejores audifonos, sea inalambrico o con cable.</h1>  
+    <article> <h1>hola, aqui Encuentra los mejores audifonos, sea inalambrico o con cable.</h1>  
     <h4> para mas informacion click en la imagen</h4>
     
     </article>
